# malrev

./: CMakeLists.txt  README.md
configs/: signatures.json
resources/: template.html
src/: main.cpp
src/analysis/: entropy.cpp  entropy.h  signature.cpp  signature.h  strings.cpp  strings.h
src/core/: logger.cpp  logger.h  sha256.cpp  sha256.h  util.cpp  util.h
src/dynamic/: ptrace_monitor.cpp  ptrace_monitor.h
src/parsers/: elf.cpp  elf.h  pe.cpp  pe.h
src/report/: report.cpp  report.h
